--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - FLASK_APP=hello.py
     build:
       context: "."
-      dockerfile: "./flask1/Dockerfile"
+      dockerfile: "./flask1/DockerfileFlask"
     depends_on:
       - db_auth
     expose:
